- Fixed a mask-length check issue: Return -1 in case the mask-length is not within the password-length range

##
## Improvements
##

- Show [r]esume in prompt in pause mode only and show [p]ause in prompt in resume mode only

##
## Technical
##

- Documents: Added docs/limits.txt
- Files: Switched back to relative current working directory on windows to workaround problems with unicode characters
- Hash Parser: Changed the way large strings are handled/truncated within the event buffer if they are too large to fit
- Hash Parser: Fixed our use of strtok_r () calls
- Self Test: Skip self-test for mode 8900 user-configurable scrypt settings are incompatible to fixed settings in the self-test hash
- Self Test: Skip self-test for mode 15700 because settings are too high and create a too long startup time
- Terminal: Send clear line code to the same output stream as the next message following
- Timer: Switch from gettimeofday() to clock_gettime() to workaround problems on cygwin

* changes v4.0.0 -> v4.0.1:

##
## Improvements
##

- Changed the maximum length of the substring of a hash shown whenever the parser found a problem while parsing the hash

##
## Bugs
##

- Fixed a memory leak while parsing a wordlist
- Fixed compile of kernels on AMD systems on windows due to invalid detection of ROCm
- Fixed compile of sources using clang under MSYS2
- Fixed overlapping memory segment copy in CPU rule engine if using a specific rule function
- Fixed a parallel build problem when using the "install" Makefile target
- Fixed the version number extraction for github releases which do not including the .git directory

* changes v3.6.0 -> v4.0.0:

##
## Features
##

- Added support to crack passwords and salts up to length 256
- Added option --optimized-kernel-enable to use faster kernels but limit the maximum supported password- and salt-length
- Added self-test functionality to detect broken OpenCL runtimes on startup