@@ -39,6 +39,7 @@
 
 - Documents: Added docs/limits.txt
 - Files: Switched back to relative current working directory on windows to workaround problems with unicode characters
+- Files: Copy include/ folder and its content to case SHARED is set to 1 in Makefile
 - Hash Parser: Changed the way large strings are handled/truncated within the event buffer if they are too large to fit
 - Hash Parser: Fixed our use of strtok_r () calls
 - Self Test: Skip self-test for mode 8900 user-configurable scrypt settings are incompatible to fixed settings in the self-test hash
